# iocp-rs

./: Cargo.toml  LICENSE
.github/workflows/: rust.yml
src/: as_handle.rs  completion_port.rs  context.rs  fs.rs  io.rs  lib.rs  operational_result.rs  utils.rs
src/fs/: file.rs  mod.rs  open_options.rs
src/net/: mod.rs  tcp.rs  udp.rs
