[package]
name = "iocp-rs"
version = "0.1.0"
edition = "2021"
description = "windows iocp"
license = "MIT"
keywords = ["iocp", "windows"]
homepage = "https://github.com/neetdai/iocp-rs"
repository = "https://github.com/neetdai/iocp-rs"
documentation = "https://docs.rs/iocp-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.48", default-feature = false, features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Pipes",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
] }

[registries.crates-io]
protocol = "sparse"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]